--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Dhaba Management"
+                    android:text="@string/dhaba_mnagement"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12ssp" />
 
@@ -57,7 +57,7 @@
                     android:background="@drawable/primary_color_btn_selector"
                     android:paddingHorizontal="15dp"
                     android:paddingVertical="5dp"
-                    android:text="Add New"
+                    android:text="@string/add_new"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp" />
