--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -68,6 +68,7 @@
                     android:paddingHorizontal="7dp"
                     android:paddingVertical="3dp"
                     android:text="@string/pending"
+                    android:visibility="gone"
                     android:textColor="@color/gold" />
 
             </LinearLayout>
