--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -25,8 +25,8 @@
             type="com.transport.mall.model.DhabaModelMain" />
 
         <variable
-            name="executiveModel"
-            type="com.transport.mall.model.UserModelMain" />
+            name="userModel"
+            type="com.transport.mall.model.UserModel" />
 
         <variable
             name="isUpdate"
@@ -117,6 +117,28 @@
                         android:textSize="@dimen/_14ssp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/accountnumber"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:hint="@string/account_number"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/gstNumberTil">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_regular"
+                        android:inputType="text"
+                        android:maxLength="18"
+                        android:text="@={viewModel.bankModel.accountNumber}"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_14ssp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/IFSCCodeTil"
@@ -127,7 +149,7 @@
                     android:hint="@string/ifsc_code"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/gstNumberTil">
+                    app:layout_constraintTop_toBottomOf="@+id/accountnumber">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
@@ -271,7 +293,7 @@
                         android:enabled="false"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
-                        android:text="@{executiveModel.executive.name}"
+                        android:text="@{userModel.name}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -340,7 +362,7 @@
                         android:enabled="false"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
-                        android:text="@{executiveModel.executive.name}"
+                        android:text="@{userModel.name}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -363,7 +385,7 @@
                         android:enabled="false"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="phone"
-                        android:text="@{executiveModel.executive.mobile}"
+                        android:text="@{userModel.mobile}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -408,7 +430,6 @@
                         android:enabled="false"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
-                        android:text="@{executiveModel.manager.name}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -431,7 +452,6 @@
                         android:enabled="false"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="phone"
-                        android:text="@{executiveModel.manager.mobile}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -485,6 +505,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:paddingVertical="@dimen/_10sdp"
+                        android:visibility="gone"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/blockingSystemText">
 
@@ -520,7 +541,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
                     android:hint="@string/choose_months"
-                    android:visibility="@{rb30Days.checked ? View.VISIBLE : View.GONE}"
+                    android:visibility="@{rb30Days.checked ? View.GONE : View.GONE}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/blockingSystemLayout">
