--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -67,6 +67,7 @@
                     android:background="@drawable/light_gold_shape"
                     android:paddingHorizontal="7dp"
                     android:paddingVertical="3dp"
+                    android:visibility="gone"
                     android:text="@string/pending"
                     android:textColor="@color/gold" />
 
